# rest-client-zed

./: .gitignore  Cargo.toml  LICENSE  README.md  extension.toml  extension.wasm
.github/workflows/: release.yml
.zed/: tasks.json
examples/: .env  test.http
languages/http/: config.toml  highlights.scm  injections.scm  outline.scm  runnables.scm
lsp/: Cargo.toml
lsp/src/: executor.rs  formatter.rs  main.rs  parser.rs
lsp/tests/: integration.rs
scripts/: build.sh  install-dev.sh
src/: lib.rs
