[package]
name = "zed-rest-lsp"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "zed-rest-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
dotenvy = "0.15"
url = "2"
